option optimize_for = LITE_RUNTIME;

package ProtoBuf;

import "common_proto.proto";

message ActionGroupProto
{
	optional int32	idleState			=	1;
	
	repeated ActionStateProto	actions =	11;
}

enum EActionStateType
{	
	EActionStateType_Normal = 0;
	EActionStateType_Skill = 1;
}

message ActionStateProto
{
	optional string stateName	=	1;
	optional int32  stateID		=	2;
	optional float	stateTime	=	3;
	optional EActionStateType stateType 	= 	4  [default = EActionStateType_Normal];  
	
	repeated AnimSlotProto 	slotList		=	11;
	repeated GameEventProto	eventList	 	=	12;
	repeated AttackDefProto	attackDefList	=	13;
}


message AnimSlotProto
{
	optional string animName	=	1;					//	动画
	optional float	startTime	=	2 [default = 0];	//	起始
	optional float	endTime		=	3 [default = 100];	//	结束
	optional int32	weight		=	4;					//	权重
}


message AttackDefProto
{	
	optional string attackDefName				=	1;
	optional int32	attackDefID					=	2;
	optional float	triggerTime					=	3;
	optional float	duration					=	4;
	optional AttackDefFxGroupProto	normalFx	=	5;
	optional AttackDefFxGroupProto	critFx		=	6;
	repeated GameEventProto			eventList	=	7;
	repeated GameEventProto			hitedEvents	=	8;	
	optional float	hitedTime					=	9;
}

message AttackDefFxGroupProto
{
	optional EffectProto	HitedEffect	=	1; 
	optional SoundProto		HitedSound	=	2;
	optional EffectProto	SelfEffect	=	3;
	optional SoundProto		SelfSound	=	4;
}